[package]
name = "telegram-ton-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2.6", features = ["chrono-0_4"] }
tower-http = { version = "0.6.2", features = ["cors"] }
dotenv = "0.15"
thiserror = "2.0.3" 
mongodb = { version = "2.5", features = ["bson-chrono-0_4"] }
log = "0.4.22"
env_logger = "0.10.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
